<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:padding="16dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="CAN0"
            android:id="@+id/faultCodeDetail_bus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="ecu0"
            android:id="@+id/faultCodeDetail_ecuName"/>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ccc"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/faultCodeScroller"
                android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="72dp"
            android:padding="8dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fetch_code_active"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:typeface="monospace"
                    android:textSize="12sp"
                    tools:text="ws/vehicle/dtc/can0_active/ecu0"
                    android:id="@+id/active_uri"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_action_refresh"
                android:id="@+id/fetchActive"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="72dp"
            android:padding="8dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fetch_code_inactive"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:typeface="monospace"
                    android:textSize="12sp"
                    tools:text="ws/vehicle/dtc/can0_inactive/ecu0"
                    android:id="@+id/inactive_uri"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_action_refresh"
                android:id="@+id/fetchInactive"/>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:id="@+id/faultCodeLogs"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="Active: ffff0000ffff at 2014-08-05 blahhh"/>


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fault_codes_subscriptions_note"
        android:gravity="bottom"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>